[package]
name = "libms"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = "0.37.2" 
serde = { version = "1.0", features = ["derive"] } 
anyhow = "1.0"
pyo3 = { version = "0.18", features = ["extension-module"] }
base64 = "0.21"
flate2 = "1.0.35"
numpress = "1.1.0"

[lib]
crate-type = ["cdylib"]
